@@ -31,6 +31,7 @@ import org.apache.lucene.search.MatchAllDocsQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.Scorable;
 import org.apache.lucene.search.ScoreMode;
+import org.apache.lucene.search.SortField;
 import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.store.Directory;
 import org.elasticsearch.Version;
@@ -38,6 +39,7 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.TriFunction;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamOutput;
+import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.BigArrays;
 import org.elasticsearch.common.xcontent.NamedXContentRegistry;
@@ -49,34 +51,39 @@ import org.elasticsearch.index.analysis.NamedAnalyzer;
 import org.elasticsearch.index.fielddata.IndexFieldData;
 import org.elasticsearch.index.fielddata.LeafFieldData;
 import org.elasticsearch.index.fielddata.ScriptDocValues;
+import org.elasticsearch.index.fielddata.SortedBinaryDocValues;
 import org.elasticsearch.index.fielddata.plain.AbstractLeafOrdinalsFieldData;
-import org.elasticsearch.index.mapper.ContentPath;
-import org.elasticsearch.index.mapper.FieldMapper;
 import org.elasticsearch.index.mapper.IndexFieldMapper;
 import org.elasticsearch.index.mapper.KeywordFieldMapper;
 import org.elasticsearch.index.mapper.MappedFieldType;
-import org.elasticsearch.index.mapper.Mapper;
-import org.elasticsearch.index.mapper.Mapper.TypeParser;
 import org.elasticsearch.index.mapper.MapperService;
+import org.elasticsearch.index.mapper.MockFieldMapper;
 import org.elasticsearch.index.mapper.NumberFieldMapper;
-import org.elasticsearch.index.mapper.ParseContext;
+import org.elasticsearch.index.mapper.RuntimeFieldType;
+import org.elasticsearch.index.mapper.TestRuntimeField;
 import org.elasticsearch.index.mapper.TextFieldMapper;
-import org.elasticsearch.index.mapper.TextSearchInfo;
-import org.elasticsearch.index.mapper.ValueFetcher;
+import org.elasticsearch.index.similarity.SimilarityService;
 import org.elasticsearch.indices.IndicesModule;
+import org.elasticsearch.indices.mapper.MapperRegistry;
 import org.elasticsearch.plugins.MapperPlugin;
+import org.elasticsearch.search.DocValueFormat;
+import org.elasticsearch.search.MultiValueMode;
+import org.elasticsearch.search.aggregations.support.ValuesSourceType;
 import org.elasticsearch.search.lookup.LeafDocLookup;
 import org.elasticsearch.search.lookup.LeafSearchLookup;
 import org.elasticsearch.search.lookup.SearchLookup;
+import org.elasticsearch.search.sort.BucketedSort;
+import org.elasticsearch.search.sort.SortOrder;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.BiFunction;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
 import static org.hamcrest.Matchers.equalTo;
@@ -84,9 +91,6 @@ import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.Matchers.sameInstance;
-import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class QueryShardContextTests extends ESTestCase {
 
@@ -216,40 +220,40 @@ public class QueryShardContextTests extends ESTestCase {
     }
 
     public void testFielddataLookupSelfReference() {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
                 //simulate a runtime field that depends on itself e.g. field: doc['field']
                 return leafLookup.doc().get(field).toString();
-            });
+            }));
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("field", queryShardContext));
         assertEquals("Cyclic dependency detected while resolving runtime fields: field -> field", iae.getMessage());
     }
 
     public void testFielddataLookupLooseLoop() {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             //simulate a runtime field cycle: 1: doc['2'] 2: doc['3'] 3: doc['4'] 4: doc['1']
             if (field.equals("4")) {
                 return leafLookup.doc().get("1").toString();
             }
             return leafLookup.doc().get(Integer.toString(Integer.parseInt(field) + 1)).toString();
-        });
+        }));
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("1", queryShardContext));
         assertEquals("Cyclic dependency detected while resolving runtime fields: 1 -> 2 -> 3 -> 4 -> 1", iae.getMessage());
     }
 
     public void testFielddataLookupTerminatesInLoop() {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             //simulate a runtime field cycle: 1: doc['2'] 2: doc['3'] 3: doc['4'] 4: doc['4']
             if (field.equals("4")) {
                 return leafLookup.doc().get("4").toString();
             }
             return leafLookup.doc().get(Integer.toString(Integer.parseInt(field) + 1)).toString();
-        });
+        }));
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("1", queryShardContext));
         assertEquals("Cyclic dependency detected while resolving runtime fields: 1 -> 2 -> 3 -> 4 -> 4", iae.getMessage());
     }
 
     public void testFielddataLookupSometimesLoop() throws IOException {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             if (docId == 0) {
                 return field + "_" + docId;
             } else {
@@ -260,7 +264,7 @@ public class QueryShardContextTests extends ESTestCase {
                 int i = Integer.parseInt(field.substring(field.length() - 1));
                 return leafLookup.doc().get("field" + (i + 1)).toString();
             }
-        });
+        }));
         List<String> values = collect("field1", queryShardContext, new TermQuery(new Term("indexed_field", "first")));
         assertEquals(List.of("field1_0"), values);
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("field1", queryShardContext));
@@ -269,16 +273,16 @@ public class QueryShardContextTests extends ESTestCase {
     }
 
     public void testFielddataLookupBeyondMaxDepth() {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             int i = Integer.parseInt(field);
             return leafLookup.doc().get(Integer.toString(i + 1)).toString();
-        });
+        }));
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("1", queryShardContext));
         assertEquals("Field requires resolving too many dependent fields: 1 -> 2 -> 3 -> 4 -> 5 -> 6", iae.getMessage());
     }
 
     public void testFielddataLookupReferencesBelowMaxDepth() throws IOException {
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             int i = Integer.parseInt(field.substring(field.length() - 1));
             if (i == 5) {
                 return "test";
@@ -286,13 +290,13 @@ public class QueryShardContextTests extends ESTestCase {
                 ScriptDocValues<?> scriptDocValues = leafLookup.doc().get("field" + (i + 1));
                 return scriptDocValues.get(0).toString() + docId;
             }
-        });
+        }));
         assertEquals(List.of("test0000", "test1111"), collect("field1", queryShardContext));
     }
 
     public void testFielddataLookupOneFieldManyReferences() throws IOException {
         int numFields = randomIntBetween(5, 20);
-        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, (field, leafLookup, docId) -> {
+        QueryShardContext queryShardContext = createQueryShardContext("uuid", null, fieldTypeLookup((field, leafLookup, docId) -> {
             if (field.equals("field")) {
                 StringBuilder value = new StringBuilder();
                 for (int i = 0; i < numFields; i++) {
@@ -302,7 +306,7 @@ public class QueryShardContextTests extends ESTestCase {
             } else {
                 return "test" + docId;
             }
-        });
+        }));
         StringBuilder expectedFirstDoc = new StringBuilder();
         StringBuilder expectedSecondDoc = new StringBuilder();
         for (int i = 0; i < numFields; i++) {
@@ -312,86 +316,77 @@ public class QueryShardContextTests extends ESTestCase {
         assertEquals(List.of(expectedFirstDoc.toString(), expectedSecondDoc.toString()), collect("field", queryShardContext));
     }
 
-    public void testRuntimeFields() throws IOException {
-        MapperService mapperService = mockMapperService("test", List.of(new MapperPlugin() {
-            @Override
-            public Map<String, TypeParser> getMappers() {
-                return Map.of("runtime", (name, node, parserContext) -> new Mapper.Builder(name) {
-                    @Override
-                    public Mapper build(ContentPath path) {
-                        return new DummyMapper(name, new DummyMappedFieldType(name));
-                    }
-                });
-            }
-        }));
-        when(mapperService.fieldType("pig")).thenReturn(new DummyMappedFieldType("pig"));
-        when(mapperService.simpleMatchToFullName("*")).thenReturn(Set.of("pig"));
+    public void testSearchRequestRuntimeFields() {
         /*
          * Making these immutable here test that we don't modify them.
          * Modifying them would cause all kinds of problems if two
          * shards are parsed on the same node.
          */
         Map<String, Object> runtimeMappings = Map.ofEntries(
-            Map.entry("cat", Map.of("type", "keyword")),
-            Map.entry("dog", Map.of("type", "keyword"))
+            Map.entry("cat", Map.of("type", "test")),
+            Map.entry("dog", Map.of("type", "test"))
         );
-        QueryShardContext qsc = new QueryShardContext(
-            0,
-            mapperService.getIndexSettings(),
-            BigArrays.NON_RECYCLING_INSTANCE,
+        QueryShardContext qsc = createQueryShardContext(
+            "uuid",
             null,
-            (mappedFieldType, idxName, searchLookup) -> mappedFieldType.fielddataBuilder(idxName, searchLookup).build(null, null),
-            mapperService,
-            null,
-            null,
-            NamedXContentRegistry.EMPTY,
-            new NamedWriteableRegistry(List.of()),
-            null,
-            null,
-            () -> 0,
-            "test",
-            null,
-            () -> true,
-            null,
-            runtimeMappings
-        );
+            Map.of("pig", new MockFieldMapper.FakeFieldType("pig"), "cat", new MockFieldMapper.FakeFieldType("cat")),
+            runtimeMappings,
+            Collections.singletonList(new MapperPlugin() {
+                @Override
+                public Map<String, RuntimeFieldType.Parser> getRuntimeFieldTypes() {
+                    return Map.of("test", (name, node, parserContext) -> new TestRuntimeField(name));
+                }
+            }));
         assertTrue(qsc.isFieldMapped("cat"));
-        assertThat(qsc.getFieldType("cat"), instanceOf(DummyMappedFieldType.class));
+        assertThat(qsc.getFieldType("cat"), instanceOf(TestRuntimeField.class));
         assertThat(qsc.simpleMatchToIndexNames("cat"), equalTo(Set.of("cat")));
         assertTrue(qsc.isFieldMapped("dog"));
-        assertThat(qsc.getFieldType("dog"), instanceOf(DummyMappedFieldType.class));
+        assertThat(qsc.getFieldType("dog"), instanceOf(TestRuntimeField.class));
         assertThat(qsc.simpleMatchToIndexNames("dog"), equalTo(Set.of("dog")));
         assertTrue(qsc.isFieldMapped("pig"));
-        assertThat(qsc.getFieldType("pig"), instanceOf(DummyMappedFieldType.class));
+        assertThat(qsc.getFieldType("pig"), instanceOf(MockFieldMapper.FakeFieldType.class));
         assertThat(qsc.simpleMatchToIndexNames("pig"), equalTo(Set.of("pig")));
         assertThat(qsc.simpleMatchToIndexNames("*"), equalTo(Set.of("cat", "dog", "pig")));
     }
 
     public static QueryShardContext createQueryShardContext(String indexUuid, String clusterAlias) {
-        return createQueryShardContext(indexUuid, clusterAlias, null);
+        return createQueryShardContext(indexUuid, clusterAlias, name -> {
+            throw new UnsupportedOperationException();
+        });
     }
 
     private static QueryShardContext createQueryShardContext(
         String indexUuid,
         String clusterAlias,
-        TriFunction<String, LeafSearchLookup, Integer, String> runtimeDocValues
+        Function<String, MappedFieldType> fieldTypeLookup
     ) {
-        MapperService mapperService = mockMapperService(indexUuid, List.of());
-        if (runtimeDocValues != null) {
-            when(mapperService.fieldType(any())).thenAnswer(fieldTypeInv -> {
-                String fieldName = (String)fieldTypeInv.getArguments()[0];
-                return mockFieldType(fieldName, (leafSearchLookup, docId) -> runtimeDocValues.apply(fieldName, leafSearchLookup, docId));
-            });
-        }
+        return createQueryShardContext(indexUuid, clusterAlias, new HashMap<>() {
+            @Override
+            public MappedFieldType get(Object key) {
+                return fieldTypeLookup.apply(key.toString());
+            }
+        }, Collections.emptyMap(), Collections.emptyList());
+    }
+
+    private static QueryShardContext createQueryShardContext(
+        String indexUuid,
+        String clusterAlias,
+        Map<String, MappedFieldType> fieldTypeLookup,
+        Map<String, Object> runtimeMappings,
+        List<MapperPlugin> mapperPlugins
+    ) {
+        MapperService mapperService = createMapperService(indexUuid, fieldTypeLookup, mapperPlugins);
         final long nowInMillis = randomNonNegativeLong();
         return new QueryShardContext(
             0, mapperService.getIndexSettings(), BigArrays.NON_RECYCLING_INSTANCE, null,
                 (mappedFieldType, idxName, searchLookup) -> mappedFieldType.fielddataBuilder(idxName, searchLookup).build(null, null),
                 mapperService, null, null, NamedXContentRegistry.EMPTY, new NamedWriteableRegistry(Collections.emptyList()),
-            null, null, () -> nowInMillis, clusterAlias, null, () -> true, null);
+            null, null, () -> nowInMillis, clusterAlias, null, () -> true, null, runtimeMappings);
     }
 
-    private static MapperService mockMapperService(String indexUuid, List<MapperPlugin> mapperPlugins) {
+    private static MapperService createMapperService(String indexUuid,
+                                                     Map<String, MappedFieldType> fieldTypeLookup,
+                                                     List<MapperPlugin> mapperPlugins) {
         IndexMetadata.Builder indexMetadataBuilder = new IndexMetadata.Builder("index");
         indexMetadataBuilder.settings(Settings.builder().put("index.version.created", Version.CURRENT)
             .put("index.number_of_shards", 1)
@@ -404,60 +399,119 @@ public class QueryShardContextTests extends ESTestCase {
             Collections.emptyMap(), Collections.emptyMap()
         );
         IndexSettings indexSettings = new IndexSettings(indexMetadata, Settings.EMPTY);
+        IndicesModule indicesModule = new IndicesModule(mapperPlugins);
+        MapperRegistry mapperRegistry = indicesModule.getMapperRegistry();
+        SimilarityService similarityService = new SimilarityService(indexSettings, null, Collections.emptyMap());
+        return new MapperService(indexSettings, indexAnalyzers, NamedXContentRegistry.EMPTY, similarityService,
+            mapperRegistry, () -> {
+            throw new UnsupportedOperationException();
+        }, () -> true, null) {
+            @Override
+            public MappedFieldType fieldType(String name) {
+                return fieldTypeLookup.get(name);
+            }
 
-        MapperService mapperService = mock(MapperService.class);
-        when(mapperService.getIndexSettings()).thenReturn(indexSettings);
-        when(mapperService.index()).thenReturn(indexMetadata.getIndex());
-        when(mapperService.getIndexAnalyzers()).thenReturn(indexAnalyzers);
-        Map<String, Mapper.TypeParser> typeParserMap = IndicesModule.getMappers(mapperPlugins);
-        Mapper.TypeParser.ParserContext parserContext = new Mapper.TypeParser.ParserContext(name -> null, typeParserMap::get,
-            Version.CURRENT, () -> null, null, null, mapperService.getIndexAnalyzers(), mapperService.getIndexSettings(),
-            () -> {
+            @Override
+            public Set<String> simpleMatchToFullName(String pattern) {
+                if (Regex.isMatchAllPattern(pattern)) {
+                    return Collections.unmodifiableSet(fieldTypeLookup.keySet());
+                }
                 throw new UnsupportedOperationException();
-            });
-        when(mapperService.parserContext()).thenReturn(parserContext);
-        return mapperService;
+            }
+        };
     }
 
-    private static MappedFieldType mockFieldType(String fieldName, BiFunction<LeafSearchLookup, Integer, String> runtimeDocValues) {
-        MappedFieldType fieldType = mock(MappedFieldType.class);
-        when(fieldType.name()).thenReturn(fieldName);
-        when(fieldType.fielddataBuilder(any(), any())).thenAnswer(builderInv -> {
-            @SuppressWarnings("unchecked")
-            Supplier<SearchLookup> searchLookup = ((Supplier<SearchLookup>) builderInv.getArguments()[1]);
-            IndexFieldData<?> indexFieldData = mock(IndexFieldData.class);
-            when(indexFieldData.load(any())).thenAnswer(loadArgs -> {
-                LeafReaderContext leafReaderContext = (LeafReaderContext) loadArgs.getArguments()[0];
-                LeafFieldData leafFieldData = mock(LeafFieldData.class);
-                when(leafFieldData.getScriptValues()).thenAnswer(scriptValuesArgs -> new ScriptDocValues<String>() {
-                    String value;
-
+    private static Function<String, MappedFieldType> fieldTypeLookup(
+        TriFunction<String, LeafSearchLookup, Integer, String> runtimeDocValues) {
+        return name -> new TestRuntimeField(name) {
+            @Override
+            public IndexFieldData.Builder fielddataBuilder(String fullyQualifiedIndexName,
+                                                           Supplier<SearchLookup> searchLookup) {
+                return (cache, breakerService) -> new IndexFieldData<>() {
                     @Override
-                    public int size() {
-                        return 1;
+                    public String getFieldName() {
+                        return name;
                     }
 
                     @Override
-                    public String get(int index) {
-                        assert index == 0;
-                        return value;
+                    public ValuesSourceType getValuesSourceType() {
+                        throw new UnsupportedOperationException();
                     }
 
                     @Override
-                    public void setNextDocId(int docId) {
-                        assert docId >= 0;
-                        LeafSearchLookup leafLookup = searchLookup.get().getLeafSearchLookup(leafReaderContext);
-                        leafLookup.setDocument(docId);
-                        value = runtimeDocValues.apply(leafLookup, docId);
+                    public LeafFieldData load(LeafReaderContext context) {
+                        return new LeafFieldData() {
+                            @Override
+                            public ScriptDocValues<?> getScriptValues() {
+                                return new ScriptDocValues<>() {
+                                    String value;
+
+                                    @Override
+                                    public int size() {
+                                        return 1;
+                                    }
+
+                                    @Override
+                                    public String get(int index) {
+                                        assert index == 0;
+                                        return value;
+                                    }
+
+                                    @Override
+                                    public void setNextDocId(int docId) {
+                                        assert docId >= 0;
+                                        LeafSearchLookup leafLookup = searchLookup.get()
+                                            .getLeafSearchLookup(context);
+                                        leafLookup.setDocument(docId);
+                                        value = runtimeDocValues.apply(name, leafLookup, docId);
+                                    }
+                                };
+                            }
+
+                            @Override
+                            public SortedBinaryDocValues getBytesValues() {
+                                throw new UnsupportedOperationException();
+                            }
+
+                            @Override
+                            public long ramBytesUsed() {
+                                throw new UnsupportedOperationException();
+                            }
+
+                            @Override
+                            public void close() {
+                                throw new UnsupportedOperationException();
+                            }
+                        };
                     }
-                });
-                return leafFieldData;
-            });
-            IndexFieldData.Builder builder = mock(IndexFieldData.Builder.class);
-            when(builder.build(any(), any())).thenAnswer(buildInv -> indexFieldData);
-            return builder;
-        });
-        return fieldType;
+
+                    @Override
+                    public LeafFieldData loadDirect(LeafReaderContext context) {
+                        throw new UnsupportedOperationException();
+                    }
+
+                    @Override
+                    public SortField sortField(Object missingValue,
+                                               MultiValueMode sortMode,
+                                               XFieldComparatorSource.Nested nested,
+                                               boolean reverse) {
+                        throw new UnsupportedOperationException();
+                    }
+
+                    @Override
+                    public BucketedSort newBucketedSort(BigArrays bigArrays,
+                                                        Object missingValue,
+                                                        MultiValueMode sortMode,
+                                                        XFieldComparatorSource.Nested nested,
+                                                        SortOrder sortOrder,
+                                                        DocValueFormat format,
+                                                        int bucketSize,
+                                                        BucketedSort.ExtraData extra) {
+                        throw new UnsupportedOperationException();
+                    }
+                };
+            }
+        };
     }
 
     private static List<String> collect(String field, QueryShardContext queryShardContext) throws IOException {
@@ -511,48 +565,6 @@ public class QueryShardContextTests extends ESTestCase {
                 });
             }
             return result;
-        }
-    }
-
-    private static class DummyMapper extends FieldMapper {
-        protected DummyMapper(String simpleName, MappedFieldType mappedFieldType) {
-            super(simpleName, mappedFieldType, Map.of(), MultiFields.empty(), CopyTo.empty());
-        }
-
-        @Override
-        protected void parseCreateField(ParseContext context) throws IOException {
-            throw new UnsupportedOperationException();
-        }
-
-        @Override
-        public Builder getMergeBuilder() {
-            throw new UnsupportedOperationException();
-        }
-
-        @Override
-        protected String contentType() {
-            throw new UnsupportedOperationException();
-        }
-    }
-
-    private static class DummyMappedFieldType extends MappedFieldType {
-        DummyMappedFieldType(String name) {
-            super(name, true, false, true, TextSearchInfo.SIMPLE_MATCH_ONLY, null);
-        }
-
-        @Override
-        public ValueFetcher valueFetcher(QueryShardContext context, SearchLookup searchLookup, String format) {
-            throw new UnsupportedOperationException();
-        }
-
-        @Override
-        public String typeName() {
-            return "runtime";
-        }
-
-        @Override
-        public Query termQuery(Object value, QueryShardContext context) {
-            throw new UnsupportedOperationException();
         }
     }
 }
